Moved some files around and generally cleaned up

--- a/views/stylesheets/print.sass
+++ b/views/stylesheets/print.sass
@@ -1,21 +1,16 @@
 .web_only
   display: none !important
 
-.section
+section
   border-left: none
   border-right: none
   border-bottom: none
   page-break-inside: avoid !important
 
+  section
+    height: auto
+    width: 29.5%
+
   .legend,
   .legend *
     display: none !important
-
-  .section h2,
-  .section h3
-    .section span
-    .section .description
-
-.section .section
-  height: auto
-  width: 29.5%
