--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,6 +1,6 @@
 !!! XML
 !!!
-%html{ :xmlns => 'http://www.w3.org/1999/xhtml', 'xml:lang' => 'en'}
+%html{ :xmlns => 'http://www.w3.org/1999/xhtml', :lang => 'en', 'xml:lang' => 'en'}
   %head
     %title Resume | Raving Genius
 
@@ -11,7 +11,7 @@
     %link{ :rel => 'shortcut icon', :href => '' }
 
     / CSS
-    %style{ :type => 'text/css', :media => 'all'} @import url('http://assets.ravinggenius.com/css?eric_meyer-reset=1.0');
+    %style{ :type => 'text/css', :media => 'all'} @import url('http://assets.ravinggenius.com/css?html5reset=1.4');
     %style{ :type => 'text/css', :media => 'all'} @import url('/styles/application.css');
     %style{ :type => 'text/css', :media => 'print'} @import url('/styles/print.css');
     %style{ :type => 'text/css', :media => 'all'} @import url('/vendor/blackbird_1_0/blackbird.css');
