--- a/views/index.haml
+++ b/views/index.haml
@@ -1,199 +1,237 @@
-%header{ :id => 'branding' }
-  %h1 Raving Genius [Thomas Ingram]
-  %span foaming at the brain
+!!! XML
+!!!
+%html{ :lang => 'en', :xmlns => 'http://www.w3.org/1999/xhtml', 'xml:lang' => 'en'}
+  %head
+    %title Resume | Raving Genius
 
-%section{ :id => 'contact' }
-  %header Contact
+    / Meta
+    %meta{ 'http-equiv' => 'Content-Type', 'content' => 'text/html; charset=utf-8' }
 
-  %section
-    %address{ :class => 'street' } Apex, NC 27502
-    %address{ :class => 'email' }
-      %a{ :href => 'mailto:rg+hireme@ravinggenius.com' } rg+hireme@ravinggenius.com
-    %span{ :class => 'phone_number' } 919 449.6305
+    / FavIcon
+    %link{ :rel => 'shortcut icon', :href => '' }
 
-%section{ :id => 'about' }
-  %header About Me
+    / CSS
+    %style{ :type => 'text/css', :media => 'all'} @import url('http://assets.ravinggenius.com/css?html5reset=1.4');
+    %style{ :type => 'text/css', :media => 'all'} @import url('/styles/application.css');
+    %style{ :type => 'text/css', :media => 'print'} @import url('/styles/print.css');
 
-  %section
-    %p I have always been fascinated with programming, looking for an opportunity to build a career with this passion. In the mean time, I have deployed several websites using open source web frameworks for friends and family, and even written programs for my graphing calculator. I have always tried to keep myself informed on the latest technologies. For the past several years I have run various GNU/Linux distributions, in addition to supporting and troubleshooting Windows. I have system and network configuration experience (both personal and professional), and I am the first person many of my friends and coworkers turn to when faced with a computer challenge, be it Windows-related, software issues or hardware configuration.
+    / JavaScript
+    %script{ :type => 'text/javascript', :src => 'http://assets.ravinggenius.com/js?jquery=1.4' }
+    %script{ :type => 'text/javascript', :src => '/scripts/application.js' }
 
-%section{ :id => 'languages' }
-  %header Geek Speak
+    :javascript
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-13210830-3']);
+      _gaq.push(['_trackPageview']);
 
-  %article{ :class => 'fluent' }
-    %header XHTML | CSS
+      (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' === document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+      })();
 
-    %section
-      %p{ :class => 'description' } Can quickly and easily create well-structured, %em semantic%/em  markup with a commanding use of the good tags.
-      %p{ :class => 'description' } Though I am no graphic designer, I am fully capable of executing other people's layouts. I have become the reference guide for any questions about valid XHTML and CSS.
+  %body
+    %header{ :id => 'branding' }
+      %h1 Raving Genius [Thomas Ingram]
+      %span foaming at the brain
 
-  %article{ :class => 'fluent' }
-    %header C# | Visual Basic | .NET
+    %section{ :id => 'contact' }
+      %header Contact
 
-    %section
-      %p{ :class => 'description' } I have been using C# and VB.NET for two years (mostly C#). During that time I have pushed myself to learn more and have become quite comfortable developing with C# and .NET in general.
+      %section
+        %address{ :class => 'street' } Apex, NC 27502
+        %address{ :class => 'email' }
+          %a{ :href => 'mailto:rg+hireme@ravinggenius.com' } rg+hireme@ravinggenius.com
+        %span{ :class => 'phone_number' } 919 449.6305
 
-  %article{ :class => 'proficient' }
-    %header Ruby
+    %section{ :id => 'about' }
+      %header About Me
 
-    %section
-      %p{ :class => 'description' } Recently started learning this. I have been working on some projects, mostly with Rails, and I have more planned. Ruby is such an elegant and expressive language, I would like for it to be my primary breadwinner. I have direct experience with Rails, Merb and Sinatra.
+      %section
+        %p I have always been fascinated with programming, looking for an opportunity to build a career with this passion. In the mean time, I have deployed several websites using open source web frameworks for friends and family, and even written programs for my graphing calculator. I have always tried to keep myself informed on the latest technologies. For the past several years I have run various GNU/Linux distributions, in addition to supporting and troubleshooting Windows. I have system and network configuration experience (both personal and professional), and I am the first person many of my friends and coworkers turn to when faced with a computer challenge, be it Windows-related, software issues or hardware configuration.
 
-  %article{ :class => 'proficient' }
-    %header JavaScript
+    %section{ :id => 'languages' }
+      %header Geek Speak
 
-    %section
-      %p{ :class => 'description' } jQuery has really introduced me to JavaScript. I wasn't much interested in JavaScript until recently when I had a real need for it. Now I am going through a book to learn more.
+      %article{ :class => 'fluent' }
+        %header XHTML | CSS
 
-  %article{ :class => 'proficient' }
-    %header SQL
+        %section
+          %p{ :class => 'description' } Can quickly and easily create well-structured, <em>semantic</em>  markup with a commanding use of the good tags.
+          %p{ :class => 'description' } Though I am no graphic designer, I am fully capable of executing other people's layouts. I have become the reference guide for any questions about valid XHTML and CSS.
 
-    %section
-      %p{ :class => 'description' } Very comfortable with the basics, such as designing normalized tables and selecting exactly the data I need. I have some experience with more advanced features like stored procedures. Experienced with MySQL, MSSQL and Sqlite.
+      %article{ :class => 'fluent' }
+        %header C# | Visual Basic | .NET
 
-  %article{ :class => 'fluent' }
-    %header PHP
+        %section
+          %p{ :class => 'description' } I have been using C# and VB.NET for two years (mostly C#). During that time I have pushed myself to learn more and have become quite proficient developing with C# and .NET in general.
 
-    %section
-      %p{ :class => 'description' } Cut my Object-Oriented teeth on PHP. Now I can do anything with it that is required. I coded a nice MVC framework for work with PHP, but it never got used.
+      %article{ :class => 'proficient' }
+        %header Ruby
 
-%section{ :id => 'portfolio' }
-  %header Portfolio
+        %section
+          %p{ :class => 'description' } Recently started learning this. I have been working on some projects, mostly with Rails, and I have more planned. Ruby is such an elegant and expressive language, I would like for it to be my primary breadwinner. I have direct experience with Rails, Merb and Sinatra.
 
-  %article
-    %header
-      %a{ :href => 'http://www.cisys.com/' } CISYS | Life Sciences
+      %article{ :class => 'proficient' }
+        %header JavaScript
 
-    %section
-      %span released
+        %section
+          %p{ :class => 'description' } jQuery has really introduced me to JavaScript. I wasn't much interested in JavaScript until recently when I had a real need for it. Now I am going through a book to learn more.
 
-      %ul
-        %li ASP.NET
-        %li C#
-        %li JavaScript (jQuery)
-        %li CSS
-        %li XHTML
-      %p{ :class => 'description' } The current design was done by an outside consultant. When I was given responsibility to maintain it, I streamlined the markup, solidified the styles and ported the existing (multiple) flavors of JavaScript to jQuery.
+      %article{ :class => 'proficient' }
+        %header SQL
 
-  %article
-    %header
-      %a{ :href => 'http://www.avoslifesciences.com/' } Avos Life Sciences
+        %section
+          %p{ :class => 'description' } Very comfortable with the basics, such as designing normalized tables and selecting exactly the data I need. I have some experience with more advanced features like stored procedures. Experienced with MySQL, MSSQL and Sqlite.
 
-    %section
-      %span released
+      %article{ :class => 'fluent' }
+        %header PHP
 
-      %ul
-        %li CSS
-        %li XHTML
-        %li PHP
-      %p{ :class => 'description' } When I started work on this site, it was a tangled mess of Dreamweaver-generated spaghetti code and no external style sheets. I converted it to (almost) valid, semantic markup and extracted the styles into separate files. Also hooked into a third-party payment service.
+        %section
+          %p{ :class => 'description' } Cut my Object-Oriented teeth on PHP. Now I can do anything with it that is required. I coded a nice MVC framework for work with PHP, but it never got used.
 
-  %article
-    %header
-      %a{ :href => 'http://www.305online.net/' } 305 Entertainment and Recordings
+    %section{ :id => 'portfolio' }
+      %header Portfolio
 
-    %section
-      %span nearly finished
+      %article
+        %header
+          %a{ :href => 'http://www.cisys.com/' } CISYS | Life Sciences
 
-      %ul
-        %li CSS
-        %li XHTML
-        %li MySQL
-        %li Ruby on Rails
-      %p{ :class => 'description' } A simple website for a friend. This site has a simple contact form for bookings and an artist listing.
+        %section
+          %span released
 
-  %article
-    %header
-      %a{ :href => 'http://allergan.pstrat.com/' } Allergan iN-Form Portal
+          %ul
+            %li ASP.NET
+            %li C#
+            %li JavaScript (jQuery)
+            %li CSS
+            %li XHTML
+          %p{ :class => 'description' } The current design was done by an outside consultant. When I was given responsibility to maintain it, I streamlined the markup, solidified the styles and ported the existing (multiple) flavors of JavaScript to jQuery.
 
-    %section
-      %span released
+      %article
+        %header
+          %a{ :href => 'http://www.avoslifesciences.com/' } Avos Life Sciences
 
-      %ul
-        %li CSS
-        %li XHTML
-        %li ASP.NET
-        %li VB
-      %p{ :class => 'description' } This project started out as a set of complex Photoshop mockups. I was the only person at my company and our client company who was able to actually implement the design with clean markup and style sheets.
+        %section
+          %span released
 
-  %article
-    %header
-      %a{ :href => 'http://www.ccfuquay.com/' } CCFuquay
+          %ul
+            %li CSS
+            %li XHTML
+            %li PHP
+          %p{ :class => 'description' } When I started work on this site, it was a tangled mess of Dreamweaver-generated spaghetti code and no external style sheets. I converted it to (almost) valid, semantic markup and extracted the styles into separate files. Also hooked into a third-party payment service.
 
-    %section
-      %span released
+      %article
+        %header
+          %a{ :href => 'http://www.305online.net/' } 305 Entertainment and Recordings
 
-      %ul
-        %li Drupal (plus modules)
-      %p{ :class => 'description' } A friend is doing a church plant in Fuquay-Varina, so I put together a basic site using Drupal and off-the-shelf modules.
+        %section
+          %span nearly finished
 
-  %article
-    %header Novartis eCatalog
+          %ul
+            %li CSS
+            %li XHTML
+            %li MySQL
+            %li Ruby on Rails
+          %p{ :class => 'description' } A simple website for a friend. This site has a simple contact form for bookings and an artist listing.
 
-    %section
-      %span discontinued
+      %article
+        %header
+          %a{ :href => 'http://allergan.pstrat.com/' } Allergan iN-Form Portal
 
-      %ul
-        %li PHP
-        %li MySQL
-        %li CSS
-        %li XHTML
-      %p{ :class => 'description' } This was an ordering system for a previous employer to aid with fulfillment with their largest client. The client has moved headquarters, and consequently this site is no longer needed.
+        %section
+          %span released
 
-%section{ :id => 'experience' }
-  %header Work Experience
+          %ul
+            %li CSS
+            %li XHTML
+            %li ASP.NET
+            %li VB
+          %p{ :class => 'description' } This project started out as a set of complex Photoshop mockups. I was the only person at my company and our client company who was able to actually implement the design with clean markup and style sheets.
 
-  %article
-    %header CISYS: Developer
+      %article
+        %header
+          %a{ :href => 'http://www.ccfuquay.com/' } CCFuquay
 
-    %section
-      %span 2007.10 - present
-      %p{ :class => 'description' } I have worked on many projects while at Cisys, most of which are for large enterprise-level clients. As the resident web standards guru, I am the go-to guy for all things CSS and HTML. Most of the products I have built have been non-public, client-specific, but some of the public sites are highlighted above. Lately I have been working on a SharePoint based service application. I design and build (normalized) databases and high-quality web applications.
+        %section
+          %span released
 
-  %article
-    %header Presentation Strategies: Developer
+          %ul
+            %li Drupal (plus modules)
+          %p{ :class => 'description' } A friend is doing a church plant in Fuquay-Varina, so I put together a basic site using Drupal and off-the-shelf modules.
 
-    %section
-      %span 2007.11 - 2008.11
-      %p{ :class => 'description' } Shortly after Cisys hired me, they contracted me to a partner/vendor. My time at PStrat was spent supporting existing projects and building new products. Most things I worked on were internal or had set expiration dates.
+      %article
+        %header Novartis eCatalog
 
-  %article
-    %header Sir Speedy Cary: Mail Room Supervisor
+        %section
+          %span discontinued
 
-    %section
-      %span 2005.09 - 2007.10
-      %p{ :class => 'description' } Address and prepare letters and postcards for bulk mail. Cut paper, run deliveries, collate, hole punch and make computer recommendations. Built a database-driven web application using PHP for one of our larger clients. (See Novartis eCatalog above.) Extra features and polish were left undone due to time and budget constraints.
+          %ul
+            %li PHP
+            %li MySQL
+            %li CSS
+            %li XHTML
+          %p{ :class => 'description' } This was an ordering system for a previous employer to aid with fulfillment with their largest client. The client has moved headquarters, and consequently this site is no longer needed.
 
-%section{ :id => 'interests' }
-  %header Other
+    %section{ :id => 'experience' }
+      %header Work Experience
 
-  %article
-    %header Honorable Mentions
+      %article
+        %header CISYS: Developer
 
-    %section
-      %ul
-        %li Flex | AS3
-        %li ASP.NET
-        %li XML
-        %li VBA
-        %li ColdFusion
-        %li SharePoint
+        %section
+          %span 2007.10 - present
+          %p{ :class => 'description' } I have worked on many projects while at Cisys, most of which are for large enterprise-level clients. As the resident web standards guru, I am the go-to guy for all things CSS and HTML. Most of the products I have built have been non-public, client-specific, but some of the public sites are highlighted above. Lately I have been working on a SharePoint based service application. I design and build (normalized) databases and high-quality web applications.
 
-  %article
-    %header Future Interests
+      %article
+        %header Presentation Strategies: Developer
 
-    %section
-      %ul
-        %li Adobe AIR
-        %li Graphic Design
+        %section
+          %span 2007.11 - 2008.11
+          %p{ :class => 'description' } Shortly after Cisys hired me, they contracted me to a partner/vendor. My time at PStrat was spent supporting existing projects and building new products. Most things I worked on were internal or had set expiration dates.
 
-  %article
-    %header Future Projects
+      %article
+        %header Sir Speedy Cary: Mail Room Supervisor
 
-    %section
-      %dl
-        %dt ScratchPad
-        %dd I have some ambitious plans for a custom content management system, but I'm still thinking about how I want it to work.
-        %dt DataMapper plugin
-        %dd For use in ScratchPad
+        %section
+          %span 2005.09 - 2007.10
+          %p{ :class => 'description' } Address and prepare letters and postcards for bulk mail. Cut paper, run deliveries, collate, hole punch and make computer recommendations. Built a database-driven web application using PHP for one of our larger clients. (See Novartis eCatalog above.) Extra features and polish were left undone due to time and budget constraints.
 
+    %section{ :id => 'interests' }
+      %header Other
+
+      %article
+        %header Honorable Mentions
+
+        %section
+          %ul
+            %li Flex | AS3
+            %li ASP.NET
+            %li XML
+            %li VBA
+            %li ColdFusion
+            %li SharePoint
+
+      %article
+        %header Future Interests
+
+        %section
+          %ul
+            %li Adobe AIR
+            %li Graphic Design
+
+      %article
+        %header Future Projects
+
+        %section
+          %dl
+            %dt ScratchPad
+            %dd I have some ambitious plans for a custom content management system, but I'm still thinking about how I want it to work.
+            %dt DataMapper plugin
+            %dd For use in ScratchPad
+
+    %script{ :type => 'text/javascript', :src => '//static.woopra.com/js/woopra.v2.js' }
+    :javascript
+      woopraTracker.track();
