--- a/views/stylesheets/application.sass
+++ b/views/stylesheets/application.sass
@@ -1,18 +1,17 @@
 body
   background-color: #FFFFFF
-  color: #000000
+  color: #333333
   font-family: mono, Helvetica, Arial, sans
   font-size: 0.9em
 
 a
-  color: #1F1F1F
-a:after
-  font-size: 0.6em
-a:visited
-  text-decoration: linethrough
+  &:after
+  &:visited
+    text-decoration: linethrough
 
 dl
   dt
+    font-weight: bold
   dd
     margin-left: 1em
 
@@ -21,53 +20,28 @@ ul
   li
     list-style-position: inside
 
-/* root headers and sections
-body
-  > header,
-  > section
-  > header
-    padding: 0.5em 1em
-  > section
+.keyword
+  font-weight: bold
 
-/* all headers, articles and sections
 header,
 article,
-section
-  border: #999999 0.125em solid
-  background-color: rgba(0, 0, 0, 0.1)
-  margin: 0.5em 1em
-//
-  > *
-    padding: 0.25em
+section,
+footer
+
 header
-article
-section
+  padding: 0.5em 1em
 
 article
+  header,
+  section
+  header:after
+    font-size: 0.9em
+  section
 //
   display: inline-block
   border: #999999 0.025em solid
-  background-color: #797979
-  background-color: #FFFFFF
-  color: #1F1F1F
   width: 15em
   min-height: 10em
   vertical-align: top
   margin: 0.5em
   padding: 0.25em
-
-article
-  header,
-  section
-//
-  header
-    background-color: #CACACA
-    cursor: pointer
-
-  header:after
-    font-size: 0.9em
-
-  section
-
-  span
-    display: block
