Add a few more keywords

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -37,7 +37,7 @@
 <article class="container-auto segment keywords">
 	<div class="row">
 		<div class="col-xs-3">
-			<h2>Skills</h2>
+			<h2>Skills/Tools</h2>
 		</div>
 
 		<div class="col-xs-9">
