Clarify where I'm comfortable working

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -27,7 +27,7 @@
 				<header><h3></h3></header>
 
 				<section>
-					<p>I am a self-taught web developer. I build, contribute to and maintain open source projects. My work is hosted on <%= link_to 'GitHub', 'https://github.com/ravinggenius' %>.</p>
+					<p>I am a self-taught full-stack web developer. I build, contribute to and maintain open source projects. My work is hosted on <%= link_to 'GitHub', 'https://github.com/ravinggenius' %>.</p>
 				</section>
 			</section>
 		</div>
