--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,11 @@
+<section class="container-auto segment auxiliary">
+	<div class="row">
+		<div class="col-xs-12">
+			<%= link_to 'Download PDF', 'resume-ingram_thomas.pdf', class: 'pull-right' %>
+		</div>
+	</div>
+</section>
+
 <header class="container-auto segment branding">
 	<div class="row">
 		<div class="col-xs-8">
