--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -6,6 +6,12 @@ body {
 	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin: 0 auto;
 
+	@media print {
+		.auxiliary {
+			display: none;
+		}
+	}
+
 	@media screen {
 		max-width: 8.5in;
 	}
